...
              padding: EdgeInsets.only(
                  bottom: Get.width * 0.04,
                  left: Get.height * 0.02,
                  right: Get.height * 0.02,
                  top: Get.height * 0.04),
              child: TextField(
                key: const Key('search_home'),
                style: TextStyle(fontSize: Get.width * 0.05),
                cursorColor: const Color(0xFF465275),
                controller: controller.searchController,
                onChanged: controller.search,
                decoration: InputDecoration(
                    fillColor: Colors.white,
...
                    )),
              ),
            ),
          ),
          Expanded(
            child: PagedGridView(
                key: const Key('words_grid'),
                pagingController: controller.pagingController,
                scrollController: controller.scrollController,
                padding: EdgeInsets.symmetric(horizontal: Get.width * 0.02),
                builderDelegate: PagedChildBuilderDelegate(
                    itemBuilder: (context, word, index) => WordCard(
                          key: Key('${word.toString()}_${controller.tabName}'),
...
