...
                              padding: EdgeInsets.symmetric(
                                  horizontal: Get.width * 0.02,
                                  vertical: Get.height * 0.01),
                              child: Row(
                                children: [
                                  InkWell(
                                      key: const Key('close_button'),
                                      child: Icon(Icons.close,
                                          color: const Color(0xFF465275),
                                          size: Get.width * 0.1),
                                      onTap: () => Get.back()),
                                  const Spacer(),
                                  InkWell(
                                      key: const Key('favorite_button'),
                                      child: Obx(
                                        () => Get.find<HomeController>()
                                                .favoriteWords
                                                .any((element) =>
                                                    element == controller.word)
                                            ? Icon(
...
